[project]
    dependencies=[
        "graphrag@git+https://github.com/microsoft/graphrag.git",
        "pydantic>=2.9.2",
]
    description="Sample downstream dependency"
    name="dep"
    requires-python=">=3.12"
    version="0.1.0"


[build-system]
    build-backend="hatchling.build"
    requires=["hatchling"]

[tool.hatch]
    [tool.hatch.metadata]
        allow-direct-references=true

